--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ requires-python = ">=3.9"
 authors = [
     {name = "Xuefeng Xu"},
 ]
-description = "Federated data Preprocessing with Sketching"
+description = "Federated data Preprocessing via aggregated Statistics"
 readme = "README.md"
 license = {file = "LICENSE"}
 keywords = [
     "Data Preprocessing",
     "Federated Learning",
-    "Data Sketching",
+    "Aggregated Statistics",
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
